Can run the Spark Java app from gradle and added example usage.

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'application'
+
+mainClassName = "com.graphql.starwars.server.StarWarsServerApplication"
 
 repositories {
     mavenCentral()
