--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 group 'graphql-kotlin'
-version '1.0-SNAPSHOT'
+version '1.1-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.1.1'
+    ext.kotlin_version = '1.2.51'
 
     repositories {
         mavenCentral()
@@ -23,19 +23,16 @@ repositories {
 }
 
 dependencies {
-    // Kotlin
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-    // Jackson Kotlin
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.8.7"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.6"
 
-    // Spark
-    compile 'com.sparkjava:spark-core:2.5.5'
+    compile 'com.sparkjava:spark-core:2.7.2'
 
-    // GraphQL
-    compile 'com.graphql-java:graphql-java:2.3.0'
+    compile 'com.graphql-java:graphql-java:9.2'
+}
 
-    // GraphKool
-    compile 'com.github.beyondeye.graphkool:graphkool-core:0.1.0'
-
+task wrapper(type: Wrapper) {
+    gradleVersion = "4.9"
 }
