--- a/build.gradle
+++ b/build.gradle
@@ -2,37 +2,42 @@ group 'graphql-kotlin'
 version '1.1-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.2.51'
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+  ext {
+    vKotlin = '1.2.61'
+    vGradleVersionsPlugin = '0.20.0' // https://github.com/ben-manes/gradle-versions-plugin
+  }
+  repositories {
+    mavenCentral()
+    jcenter() // for ben-manes.versions
+  }
+  dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$vKotlin"
+    classpath "com.github.ben-manes:gradle-versions-plugin:${vGradleVersionsPlugin}"
+  }
 }
 
+apply plugin: "com.github.ben-manes.versions"
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
 mainClassName = "com.graphql.starwars.server.StarWarsServerApplication"
 
 repositories {
-    mavenCentral()
-    maven { url 'https://jitpack.io' }
+  mavenCentral()
+  maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$vKotlin"
+  compile "org.jetbrains.kotlin:kotlin-reflect:$vKotlin"
 
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.6"
+  compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.6"
 
-    compile 'com.sparkjava:spark-core:2.7.2'
+  compile 'com.sparkjava:spark-core:2.7.2'
 
-    compile 'com.graphql-java:graphql-java:9.2'
+  compile 'com.graphql-java:graphql-java:9.2'
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = "4.9"
+  gradleVersion = "4.9"
 }
